--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,5 @@
 [FORMAT]
 max-line-length=120
 
-init-hook='import sys; sys.path.append("breakout_game")'
+[MASTER]
+init-hook='import sys; sys.path.append("breakout")'
