--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pylint .
+        pylint ./breakout_game
         python -m pytest ./tests
