--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,7 +20,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Test with pytest
+    - name: Test with pylint
       run: |
         pylint ./breakout_game
+
+    - name: Test with pytest
+      run: |
         python -m pytest ./tests
